Grab brush is slowed in 2.71 testbuild2 than in 2.70 #40510

Closed
opened 2014-06-05 23:28:48 +02:00 by gandalf3 · 19 comments
Member

System Information
Archlinux
GTX 460

Blender Version
Broken: testbuild 2 (517094a)
Worked: 2.70 (19e627c)

Short description of error
The grab brush in the testbuild is slow and choppy compared to 2.70, however in 2.70 grabbing and dragging the mesh around (with the sculpting tool) leaves visual artifacts behind. The artifacts disappear after LMB is released.

Exact steps for others to reproduce the error

  1. Open sculpt_grab_lag.blend in 2.70
  2. Click and drag on the edge of the sphere, then move the mouse around a bit
  3. Repeat using testbuild 2.
**System Information** Archlinux GTX 460 **Blender Version** Broken: testbuild 2 (517094a) Worked: 2.70 (19e627c) **Short description of error** The grab brush in the testbuild is slow and choppy compared to 2.70, however in 2.70 grabbing and dragging the mesh around (with the sculpting tool) leaves visual artifacts behind. The artifacts disappear after LMB is released. **Exact steps for others to reproduce the error** 1. Open [sculpt_grab_lag.blend](https://archive.blender.org/developer/F92778/sculpt_grab_lag.blend) in 2.70 2. Click and drag on the edge of the sphere, then move the mouse around a bit 3. Repeat using testbuild 2.
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @gandalf3

Added subscriber: @gandalf3
Antonis Ryakiotakis was assigned by Sergey Sharybin 2014-06-06 10:30:32 +02:00

Added subscribers: @Psy-Fi, @Sergey

Added subscribers: @Psy-Fi, @Sergey

@Psy-Fi, can i have your help here? :)

@Psy-Fi, can i have your help here? :)

This sounds very weird to me and I can't see anything of the sort here but I'll do a profile session here to make sure.

This sounds very weird to me and I can't see anything of the sort here but I'll do a profile session here to make sure.
Author
Member

It's definitely slower for me (just did a couple more tests).. Is there anything I can do to try and deduce the cause?

It's definitely slower for me (just did a couple more tests).. Is there anything I can do to try and deduce the cause?

Can you load factory settings and see if the issue persists? Then if it doesn't persist anymore can you try changing options to see which one might cause this?

Can you load factory settings and see if the issue persists? Then if it doesn't persist anymore can you try changing options to see which one might cause this?
Author
Member

The issue persists with factory settings.

The issue persists with factory settings.

Just a note. This test file is so low poly that you shouldn't be witnessing any slowdowns. I did try on a subdivided sphere but there's no significant difference. Profiling on a subdivided sphere also does not show any striking differences. Even add-ons can sometimes influence performance but I really can't understand why this would be specific to the grab brush.

Just a note. This test file is so low poly that you shouldn't be witnessing any slowdowns. I did try on a subdivided sphere but there's no significant difference. Profiling on a subdivided sphere also does not show any striking differences. Even add-ons can sometimes influence performance but I really can't understand why this would be specific to the grab brush.
Antonis Ryakiotakis removed their assignment 2014-06-07 23:39:37 +02:00

I can't help here, I can't reproduce this, profiling shows nothing and nothing comes to mind that would influence the grab brush specifically.

I can't help here, I can't reproduce this, profiling shows nothing and nothing comes to mind that would influence the grab brush specifically.
Author
Member

Hm.. I tried it with a high poly cube-sphere and it behaved smooth, and now it's behaving smooth with low poly cube-spheres too..!?

Using the test file is still laggy though.

Hm.. I tried it with a high poly cube-sphere and it behaved smooth, and now it's behaving smooth with low poly cube-spheres too..!? Using the test file is still laggy though.
Author
Member

Your right, the laggyness in the test file is not specific to the grab brush, it seems to affect all the brushes.

And now it's back to being laggy even in new files too. I guess it's just too inconsistent..

Your right, the laggyness in the test file is not specific to the grab brush, it seems to affect all the brushes. And now it's back to being laggy even in new files too. I guess it's just too inconsistent..

Can you disable threaded sculpt in the low poly file and see if it behaves better?

Can you disable threaded sculpt in the low poly file and see if it behaves better?
Author
Member

You're right, that does make it behave better.

You're right, that does make it behave better.
Antonis Ryakiotakis self-assigned this 2014-06-07 23:48:40 +02:00

This issue was referenced by f8f25c38d3

This issue was referenced by f8f25c38d3352c7f480bbf1eba6415f76f62c76e

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit f8f25c38d3.

Closed by commit f8f25c38d3.

Restored threaded sculpting to how it was in 2.70. The weird thing is that the previous behaviour should have more overhead in that simple case. Anyway, we'll see how this behaves, if it's still not fixed we'll reopen.

Restored threaded sculpting to how it was in 2.70. The weird thing is that the previous behaviour should have more overhead in that simple case. Anyway, we'll see how this behaves, if it's still not fixed we'll reopen.
Author
Member

It just tested with f8f25c3, and it seems to be working fine.

Thanks! :)

It just tested with f8f25c3, and it seems to be working fine. Thanks! :)
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40510
No description provided.